alias en el JSON output de Business y Users
-Se define alias para negocio_id
-Se define alias para categoria_id
-Se cambia el boom.error que regresan los servicios cuando hay errorr
-Se agregan validaciones extras al validateJWT en caso de token expirado
