# models/user-model.ts
@@ -9,7 +9,14 @@ const userSchema = new Schema<IUser>({
   telefono_personal: { type: Number, required: true },
   rol: { type: Number, required: true },
   avatar: { type: String, requiered: false },
-  negocio_id: { type: Schema.Types.ObjectId, ref: "Business" },
+  negocio_id: { type: Schema.Types.ObjectId, ref: "Business", alias: "negocio" },
 });
+
+userSchema.set('toJSON', {
+  virtuals: true,
+  versionKey: false,
+  transform: function (doc, ret) { delete ret._id; delete ret.negocio_id }
+});
+
 const User = model<IUser>("User", userSchema);
 export const models = { User };
